<resources>
    <string name="app_name">AdoptAPet</string>
    <string name="button_addAdoptAPet">Add Pet</string>
    <string name="hint_adoptTitle">Adopt Title</string>
    <string name="hint_adoptDescription">Description</string>
    <string name="hint_petAge">Pet Age</string>
    <string name="hint_email">Email</string>
    <string name="hint_date">Date</string>
    <!-- Snackbar -->
    <string name="enter_adopt_title">Please enter a name/title for the pet listing</string>
    <string name="enter_adopt_description">Please enter a description!</string>
    <string name="enter_adopt_email">Please enter an email!</string>
    <string name="enter_adopt_age">Please enter an email!</string>
    <string name="enter_adopt_date">Please enter an email!</string>

    <!-- Save -->
    <string name="save_adopt">Save Adopt Listing</string>

    <!-- Menu -->
    <string name="menu_addPet">Add</string>
    <string name="menu_cancelPet">Cancel</string>
    <string name="menu_deletePet">Delete</string>

    <!-- Images -->
    <string name="button_addImage">Add Image</string>

    <string name="select_pet_image">Select Pet Image</string>
    <string name="change_pet_image">Change Pet Image</string>

    <!-- Map -->
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_adopt_maps">Map for Adoptable Pets</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>